--- a/master.yml
+++ b/master.yml
@@ -1,21 +1,28 @@
 ---
 # #Note: All the YAML files in the dir is parsed before the master is parsed. So to support implicit imports.
 
-kart: # All elements of the master file are considered to be namespace roots. ie: customerApp would be kart.customerApp.
-  customerApp: # The properties could be defined in the file root, too.
-    type: app.client # The dependency on the server app, would be resolved automatically, while parsing outgoing connections.
+structure:
+  kart:
+    type: app
+    components:
+      customerApp: # The properties could be defined in the file root, too.
+        type: app.client # The dependency on the server app, would be resolved automatically, while parsing outgoing connections.
 
-  customerServer:
-    type: app.server
+      customerServer:
+        type: app.server
 
-  configStore:
-    type: app.store # #Note: Dependencies of the DB-s are resoled through incoming connections.
-    structure: customerServer # The value is a namespace.
-    config: # #Note: The config could be overridden externally.
-      platform: configStore # This is a custom plugin to manage app config.
+      configStore:
+        type: app.store # #Note: Dependencies of the DB-s are resoled through incoming connections.
+        structure: customerServer # The value is a namespace.
+        config: # #Note: The config could be overridden externally.
+          platform: configStore # This is a custom plugin to manage app config.
 
-  objectStore:
-    type: app.store
-    structure: customerServer # #Note: This will exclude customerServer.Config, as it's handled by the configStore.
-    config:
-      platform: MySQL
+      objectStore:
+        type: app.store
+        structure: customerServer # #Note: This will exclude customerServer.Config, as it's handled by the configStore.
+        config:
+          platform: MySQL # #Note: This is a language agnostic builder for interfacing with MySQL.
+
+    handlers:
+      app.client: react
+      app.server: java-spring
